--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,12 +28,12 @@
       {% if request.user.is_authenticated %}
 
       <div class="header__user">
-        <a href="{% url 'update-user' %}">
+        <a href="{% url 'user-profile' user.id %}">
           <div class="avatar avatar--medium active">
             <img src="https://randomuser.me/api/portraits/men/37.jpg" />
           </div>
           <p>
-            {{request.user.username}} <span>@{{request.user.username}}</span>
+            {{request.user.profile.name}} <span>@{{request.user.username}}</span>
           </p>
         </a>
         <button class="dropdown-button">
